test/pass/override.min
program
    string x := "Hello!";

    function void goodbye do 
        string x := "Goodbye!" !
start
    x!
    goodbye;
end
