test/fail/repeated.min
program
    function void hello number a do
        number a;
        return a
start

end
